--- a/public/stylesheets/engforev/home.css
+++ b/public/stylesheets/engforev/home.css
@@ -3,7 +3,7 @@ html {
 }
 
 .wrapper {
-  background: url("https://res.cloudinary.com/dccibzcxp/image/upload/v1707085270/Afro%20Language%20lab/IMG_8209_ddtbqb.jpg");
+  background: url("https://res.cloudinary.com/dccibzcxp/image/upload/v1725565872/Afro%20Language%20lab/IMG_7893_lcrkll.jpg");
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
