--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -1651,6 +1651,11 @@ customers-cards:before {
   color: rgb(76, 131, 234);
 }
 
+.lab{
+  letter-spacing: 0.2rem;
+  color: rgb(255, 197, 8); 
+}
+
 #vimeo-content {
   position: absolute;
   top: 50%;
