--- a/public/stylesheets/courses/showCourse.css
+++ b/public/stylesheets/courses/showCourse.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   height: 80vh;
   overflow: hidden;
-  background-color: rgba(37, 15, 46, 0.979);
+  background-color: rgba(16, 5, 20, 0.979);
 }
 
 .img-small {
@@ -81,7 +81,7 @@ body {
 }
 
 .banner-heading {
-  color: rgb(9, 114, 185);
+  color: rgba(255, 255, 255, 0.886);
   /* width: 100%; */
   padding: 1rem;
   font-family: "Poppins", sans-serif;
@@ -92,7 +92,7 @@ body {
   opacity: 0;
   letter-spacing: 0.2rem;
   /* line-height: 5rem; */
-  text-shadow: 1px 2px 2px rgba(253, 203, 4, 0.89);
+  text-shadow: 1px 2px 2px rgb(22, 3, 44);
   animation: moveBanner 2s 1.2s forwards;
 }
 
