--- a/views/programs/pecp/myPecpSpace.ejs
+++ b/views/programs/pecp/myPecpSpace.ejs
@@ -95,28 +95,26 @@
     }
 
     .course-link-wrapper {
-      border-radius: 5px;
-      border: 2px solid white;
-      background: #1A2980;
-      /* fallback for old browsers */
-      background: -webkit-linear-gradient(to left, #26a0d0, #1A2980);
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to left, #26a0d0, #1A2980);
+      
     }
 
     .course-link {
-      color: white;
-
+      border-radius: 5px;
+      border: 2px solid white;
+      display: block;
+      background-color: #1A2980;
       text-decoration: none;
       font-size: 1.3rem;
-      padding: 1.3rem 2rem;
-      transition: all 0.3s;
+      padding: 1rem 1rem;
+      color: rgba(255, 255, 255, 0.836);
+      transition: all 0.5s;
     }
 
     .course-link:hover {
       text-decoration: none;
-      font-size: 1.35rem;
-      color: white;
+      /* font-size: 1.35rem; */
+      color: rgba(255, 255, 255, 0.836);
+      background-color: #3046c0;
 
     }
 
