--- a/public/stylesheets/courses/showModule.css
+++ b/public/stylesheets/courses/showModule.css
@@ -146,9 +146,12 @@ body {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
+
+
 .lessonTitle{
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande";
-  font-size: 1rem; 
+  font-size: 1.4rem; 
+  font-weight: 300;
 }
 
 .course-video-heading {
