all chapters => voir tous les chapitres

--- a/views/courses/course_modules/showModule.ejs
+++ b/views/courses/course_modules/showModule.ejs
@@ -1,5 +1,4 @@
 <% layout('layouts/courseBoilerplate') %>
-
   <link href="/stylesheets/courses/showModule.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <!-- Google Fonts -->
@@ -18,7 +17,7 @@
         </h1>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          All Chapters
+          Voir les autres chapitres
         </button>
       </div>
     </div>
