--- a/views/courses/course_modules/showModule.ejs
+++ b/views/courses/course_modules/showModule.ejs
@@ -52,7 +52,7 @@
     </div>
   </div>
   <p class="module-title-wrapper">
-    Chapter <%= module_number %> : <%= courseModule.title %> <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Chapter <%= module_number %> : <%= courseModule.title %> <button type="button" class="btn btn-success mx-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Voir les autres chapitres
         </button>
   </p>
@@ -124,97 +124,91 @@
       <h3 class="course-video-heading">
         <span class="underline-section">Watch the grammar lesson and take note</span>
       </h3>
-
       <div class="d-flex flex-wrap justify-content-between align-items-center my-3">
-
         <% for (video of courseModule.videoLinks) {%>
           <% if (video.lessonType==="Grammar" ) {%>
             <div class="col-lg-6 col-md-12">
               <div class="lessonWrapper mx-2 pb-3">
-                <img class="img-fluid img-thumbnail" src="<%= video.lessonImage%> " alt="Grammar lesson">
+                <img class="img-thumbnail lesson-img" src="<%= video.lessonImage%> " alt="Grammar lesson">
                 <div class="py-2 ms-3 ">
                   <p class="lessonTitle">
-                    <%= video.title %>
+                      <%= video.title %>
                   </p>
                   <!-- Button trigger modal -->
                   <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                    data-bs-target="#video-<%= courseModule.videoLinks.indexOf(video) %>">
-                    Watch the lesson
+			  data-bs-target="#video-<%= courseModule.videoLinks.indexOf(video) %>">
+                      Watch the lesson
                   </button>
                 </div>
-              </div>
             </div>
-            <%}%>
+              </div>
+              <%}%>
               <%}%>
       </div>
       <% for (video of courseModule.videoLinks) {%>
-        <!-- Modal -->
-        <div class="modal fade" id="video-<%= courseModule.videoLinks.indexOf(video) %>" tabindex="-1"
-          aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">
-                  <%= video.title %>
-                </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <!-- Modal -->
+          <div class="modal fade" id="video-<%= courseModule.videoLinks.indexOf(video) %>" tabindex="-1"
+               aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg modal-dialog-centered">
+		  <div class="modal-content">
+		      <div class="modal-header">
+			  <h5 class="modal-title" id="exampleModalLabel">
+			      <%= video.title %>
+			  </h5>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		      </div>
+		      <div class="modal-body">
+			  <div id="tv-container">
+			      <div id="monitor">
+				  <div class="afrohk-TV">
+				      <h3 class="text-center afrohk-text mb-2 py-0">
+					  <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
+				      </h3>
+				  </div>
+				  <div id="monitorscreen">
+				      <iframe id="vimeo-content" src="<%=video.engCourseLink %>" frameborder="0" width="100%"
+					      height="100%"
+					      allow="accelerometer; autoplay; clipboard-write; fullscreen; encrypted-media; gyroscope; picture-in-picture"
+					      allow="fullscreen" title=""></iframe>
+				  </div>
+			      </div>
+			  </div>
+		      </div>
+		      <div class="modal-footer">
+			  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+			      Quitter
+			  </button>
+		      </div>
+		  </div>
               </div>
-              <div class="modal-body">
-                <div id="tv-container">
-                  <div id="monitor">
-                    <div class="afrohk-TV">
-                      <h3 class="text-center afrohk-text mb-2 py-0">
-                        <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
-                      </h3>
-                    </div>
-                    <div id="monitorscreen">
-                      <iframe id="vimeo-content" src="<%=video.engCourseLink %>" frameborder="0" width="100%"
-                        height="100%"
-                        allow="accelerometer; autoplay; clipboard-write; fullscreen; encrypted-media; gyroscope; picture-in-picture"
-                        allow="fullscreen" title=""></iframe>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-                  Quitter
-                </button>
-              </div>
-            </div>
           </div>
-        </div>
-        <% } %>
+      <% } %>
     </div>
-
     <!-- Vocabulary lesson -->
     <div class="video-wrapper">
-      <h3 class="course-video-heading">
-        <span class="underline-section">Watch the Vocabulary lesson and take note</span>
-      </h3>
+	<h3 class="course-video-heading">
+            <span class="underline-section">Watch the Vocabulary lesson and take note</span>
+	</h3>
 
-      <div class="d-flex flex-wrap justify-content-between align-items-center my-3">
-
-        <% for (video of courseModule.videoLinks) {%>
-          <% if (video.lessonType==="Vocabulary" ) {%>
-            <div class="col-lg-6 col-md-12">
-              <div class="lessonWrapper mx-2 pb-3">
-                <img class="img-fluid img-thumbnail" src="<%= video.lessonImage%>" alt="Vocabulary lesson">
-                <div class="py-2 ms-3 ">
-                  <p class="lessonTitle">
-                    <%= video.title %>
-                  </p>
-                  <!-- Button trigger modal -->
-                  <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                    data-bs-target="#video-<%= courseModule.videoLinks.indexOf(video) %>">
-                    Watch the lesson
-                  </button>
-                </div>
-              </div>
-            </div>
-            <%}%>
-
-
+	<div class="d-flex flex-wrap justify-content-between align-items-center my-3">
+            <% for (video of courseModule.videoLinks) {%>
+		<% if (video.lessonType==="Vocabulary" ) {%>
+		    <div class="col-lg-6 col-md-12">
+			<div class="lessonWrapper mx-2 pb-3">
+			    <img class="img-fluid img-thumbnail" src="<%= video.lessonImage%>" alt="Vocabulary lesson">
+			    <div class="py-2 ms-3 ">
+				<p class="lessonTitle">
+				    <%= video.title %>
+				</p>
+				<!-- Button trigger modal -->
+				<button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
+					data-bs-target="#video-<%= courseModule.videoLinks.indexOf(video) %>">
+				    Watch the lesson
+				</button>
+			    </div>
+			</div>
+		    </div>
+		<%}%>
               <%}%>
       </div>
       <% for (video of courseModule.videoLinks) {%>
