--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -737,14 +737,7 @@ ul {
     .slogan {
       font-size: 1rem;
     }
-
-
-
   }
-
-
-
-
 
   /* End social media */
 
@@ -757,10 +750,6 @@ ul {
       transform: translateY(-4px);
     }
   }
-
-
-
-
   /* Button  */
 
   /* ======== Button 29 =====*/
@@ -946,8 +935,7 @@ ul {
 
   @media (max-width: 768px) {
     #footer {
-      background: #141E30;
-
+      /* background: #141E30; */
     }
 
     .footer-links-header {
