--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,6 +16,7 @@
   <meta property="og:image"
   content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709840765/all_ajcokp.jpg"
 />
+<link rel="icon" href="/assets/img/ALL.png">
 
 
   <!-- Bootstrap Css -->
