--- a/views/layouts/engClubBoilerplate.ejs
+++ b/views/layouts/engClubBoilerplate.ejs
@@ -13,9 +13,10 @@
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:image"
+<meta property="og:image"
   content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709840765/all_ajcokp.jpg"
 />
+<link rel="icon" href="/assets/img/ALL.png">
 
 
   <!-- Bootstrap Css -->
